--- a/index.html
+++ b/index.html
@@ -11,20 +11,22 @@
 
 <body class="quicksand-font">
   <header>
-    <nav class="nav-area">
-      <div class="school">
-        <img src="assets/logo.png" alt="" srcset="">
-        <h4>SCHOOL</h4>
-      </div>
-      <div>
-        <ul>
-          <li class=""> <a href=""></a> Home</li>
+    <nav class="navbar display-flex">
 
-        </ul>
-      </div>
-      <div>
-        <button>Contact</button>
-      </div>
+      <img class="nav-img" src="assets/logo.png" alt="" srcset="">
+
+      <h4 class="school-text display-flex">SCHOOL</h4>
+
+
+      <ul class="nav-links display-flex">
+        <li class="nav-item color-1"> <a href="" class="nav-link"></a> Home</li>
+        <li class="nav-item color-2"> <a href="" class="nav-link"></a>About</li>
+        <li class="nav-item color-3"> <a href="" class="nav-link"></a>Facilities</li>
+        <li class="nav-item color-4"> <a href="" class="nav-link"></a>Admission</li>
+      </ul>
+
+      <button class="primary-button">Contact</button>
+
     </nav>
 
   </header>
