header section add

--- a/index.html
+++ b/index.html
@@ -24,13 +24,26 @@
         <li class="nav-item color-3"> <a href="" class="nav-link"></a>Facilities</li>
         <li class="nav-item color-4"> <a href="" class="nav-link"></a>Admission</li>
       </ul>
-
       <button class="primary-button">Contact</button>
-
     </nav>
 
   </header>
   <main>
+    <div class="header-section  display-flex">
+      <div class="header-content-area">
+        <h1 class="content-hading">Empowering
+          students from small age towards vision</h1>
+        <p class="content">With the courage, Confidence, Creativity and Compassion to make their Unique Contribution in
+          a Diverse and Dynamic
+          World.</p>
+        <button class="content-area-button">Enroll Now</button>
+      </div>
+
+      <div class="header-img-area">
+        <img src="assets/hero-kids.png" alt="" srcset="">
+
+      </div>
+    </div>
 
   </main>
   <footer>
