--- a/index.html
+++ b/index.html
@@ -11,39 +11,81 @@
 
 <body class="quicksand-font">
   <header>
-    <nav class="navbar display-flex">
+    <nav class="navbar ">
+      <nav class="navbar display-flex">
 
-      <img class="nav-img" src="assets/logo.png" alt="" srcset="">
+        <img class="nav-img" src="assets/logo.png" alt="" srcset="">
+        <h4 class="school-text display-flex">SCHOOL</h4>
 
-      <h4 class="school-text display-flex">SCHOOL</h4>
 
+        <ul class="nav-links display-flex">
+          <li class="nav-item color-1"> <a href="" class="nav-link"></a> Home</li>
+          <li class="nav-item color-2"> <a href="" class="nav-link"></a>About</li>
+          <li class="nav-item color-3"> <a href="" class="nav-link"></a>Facilities</li>
+          <li class="nav-item color-4"> <a href="" class="nav-link"></a>Admission</li>
+        </ul>
+        <button class="primary-button">Contact</button>
+      </nav>
 
-      <ul class="nav-links display-flex">
-        <li class="nav-item color-1"> <a href="" class="nav-link"></a> Home</li>
-        <li class="nav-item color-2"> <a href="" class="nav-link"></a>About</li>
-        <li class="nav-item color-3"> <a href="" class="nav-link"></a>Facilities</li>
-        <li class="nav-item color-4"> <a href="" class="nav-link"></a>Admission</li>
-      </ul>
-      <button class="primary-button">Contact</button>
     </nav>
+
 
   </header>
   <main>
     <div class="header-section  display-flex">
       <div class="header-content-area">
-        <h1 class="content-hading">Empowering
-          students from small age towards vision</h1>
+        <h1 class="content-hading"><span class="color-1">Empowering</span>
+          students from small age <span class="color-3">towards vision</span></h1>
         <p class="content">With the courage, Confidence, Creativity and Compassion to make their Unique Contribution in
           a Diverse and Dynamic
           World.</p>
-        <button class="content-area-button">Enroll Now</button>
+        <div><button class="content-area-button">Enroll Now</button></div>
+
       </div>
 
       <div class="header-img-area">
-        <img src="assets/hero-kids.png" alt="" srcset="">
+        <img class="main-img" src="assets/hero-kids.png" alt="" srcset="">
 
       </div>
     </div>
+
+
+
+
+    <div class="curriculum-section">
+
+
+      <div class="curriculum-section-div">
+
+        <div class="curriculum-div-1 color-gr-1">
+          <img class="curriculum-section-img" src="assets/kinder.png" alt="">
+          <h4 class="curriculum-section-4">Kinder (3-6) Years</h4>
+          <p class="curriculum-section-content">Cum sociis natoque penatibus et magnis
+            dis parturient montes, nascetur ridiculus
+            mu sdis parturient</p>
+          <h4 class="read-1">Read More</h4>
+        </div>
+        <div class="curriculum-div-1 color-gr-2">
+          <img class="curriculum-section-img" src="assets/elementary.png" alt="">
+          <h4 class="curriculum-section-4">Kinder (3-6) Years</h4>
+          <p class="curriculum-section-content">Cum sociis natoque penatibus et magnis
+            dis parturient montes, nascetur ridiculus
+            mu sdis parturient</p>
+          <h4 class="read-2">Read More</h4>
+        </div>
+        <div class="curriculum-div-1 color-gr-3">
+          <img class="curriculum-section-img" src="assets/middle.png" alt="">
+          <h4 class="curriculum-section-4">Kinder (3-6) Years</h4>
+          <p class="curriculum-section-content">Cum sociis natoque penatibus et magnis
+            dis parturient montes, nascetur ridiculus
+            mu sdis parturient</p>
+          <h4 class="read-3">Read More</h4>
+        </div>
+      </div>
+    </div>
+
+
+
 
   </main>
   <footer>
