--- a/index.html
+++ b/index.html
@@ -4,93 +4,154 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Kids School</title>
-  <script src="https://kit.fontawesome.com/87a7ce6c07.js" crossorigin="anonymous"></script>
+  <title>Document</title>
   <link rel="stylesheet" href="style/style.css">
 </head>
 
-<body class="quicksand-font">
-  <header>
-    <nav class="navbar ">
-      <nav class="navbar display-flex">
+<body class="body-width">
+  <header class="navbar">
+    <div class="logos">
+      <img src="assets/logo.png" alt="School Logo">
+      <h1 class="school">SCHOOL</h1>
+    </div>
+    <nav>
 
-        <img class="nav-img" src="assets/logo.png" alt="" srcset="">
-        <h4 class="school-text display-flex">SCHOOL</h4>
-
-
-        <ul class="nav-links display-flex">
-          <li class="nav-item color-1"> <a href="" class="nav-link"></a> Home</li>
-          <li class="nav-item color-2"> <a href="" class="nav-link"></a>About</li>
-          <li class="nav-item color-3"> <a href="" class="nav-link"></a>Facilities</li>
-          <li class="nav-item color-4"> <a href="" class="nav-link"></a>Admission</li>
-        </ul>
-        <button class="primary-button">Contact</button>
-      </nav>
-
+      <ul class="links-area">
+        <li class="item"><a href="#" class="link-1 ">Home</a></li>
+        <li class="item"><a href="#" class="link-2 ">About</a></li>
+        <li class="item"><a href="#" class="link-3">Facilities</a></li>
+        <li class="item"><a href="#" class="link-4">Admission</a></li>
+      </ul>
     </nav>
-
-
+    <a href="" class="contact-btn">Contact</a>
   </header>
-  <main>
-    <div class="header-section  display-flex">
-      <div class="header-content-area">
-        <h1 class="content-hading"><span class="color-1">Empowering</span>
-          students from small age <span class="color-3">towards vision</span></h1>
-        <p class="content">With the courage, Confidence, Creativity and Compassion to make their Unique Contribution in
-          a Diverse and Dynamic
-          World.</p>
-        <div><button class="content-area-button">Enroll Now</button></div>
 
+  <section class="hero">
+    <div class="hero-content">
+      <h1 class="content-heading"><span class="heading-1">Empowering</span> <br> students from small <br> age <span
+          class="heading-2">towards
+          vision</span></h1>
+      <p class="content-pera">With the courage, confidence, creativity, and compassion to make their unique contribution
+        in a diverse and
+        dynamic world.</p>
+      <button class="button">Enroll Now</button>
+    </div>
+    <div class="hero-image">
+      <img src="assets/hero-kids.png" alt="Child Image">
+    </div>
+  </section>
+
+  <div class="curriculum">
+    <h2 class="curriculum-heading">Standard Curriculum</h2>
+    <div id="cardss">
+      <div class="card card-color-1">
+        <img class="card-img" src="assets/kinder.png" alt="">
+        <h3 class="">Kinder (3-6) Years</h3>
+        <p>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus sociis parturient.</p>
+        <p class="read-1">Read More</p>
       </div>
+      <div class="card  card-color-2">
+        <img class="card-img" src="assets/elementary.png" alt="">
+        <h3>Elementary School</h3>
+        <p class="">Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus sociis
+          parturient.</p>
+        <p class="read-1">Read More</p>
+      </div>
+      <div class="card card-color-3">
+        <img class="card-img" src="assets/middle.png" alt="">
+        <h3 class="card-inner-heading">Middle(10-16)Years</h3>
+        <p>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus sociis parturient.</p>
+        <p class="read-1">Read More</p>
+      </div>
+    </div>
+    <div class="arrow-simbole">
+      <button class="button1">&lt;</button>
+      <button class="button1">&gt;</button>
+    </div>
+  </div>
+  <!-- our-stories-section -->
 
-      <div class="header-img-area">
-        <img class="main-img" src="assets/hero-kids.png" alt="" srcset="">
+
+  <section class="our-stories-section">
+    <h2 class="Our-Stories-heading">Our Stories</h2>
+
+
+    <div class="stories-grid">
+      <div class="story-item large large-item">
+        <img src="assets/story-1.png" alt="">
+        <div class="story-content">
+          <span class="story-date date-1">November 19, 2019</span>
+          <h3 class="a-fun">A fun toddler coloring training on classroom</h3>
+          <p class="story  story-long">Beautiful branding for changes by Never Now in Australia. Changes is a platform
+            for open
+            discussion in an
+            inclusive and collaborative environment, providing the...</p>
+        </div>
+      </div>
+      <div class="story-item">
+        <img src="assets/story-2.png" alt="">
+        <span class="story-date color-1">November 19, 2019</span>
+        <h class="story-content-1">Find out if a school fits the family’s needs</h>
+      </div>
+      <div class="story-item">
+        <img src="assets/story-3.png" alt="">
+        <span class="story-date color">November 19, 2019</span>
+        <h4 class="story-content-1 ">Summer math & literacy centres for kids</h4>
+      </div>
+      <div class="story-item">
+        <img src="assets/story-4.png" alt="">
+        <span class="story-date color-2">September 10, 2019</span>
+        <h4 class="story-content-1">Classroom management techniques for new tutors</h4>
+      </div>
+      <div class="story-item">
+        <img src="assets/story-5.png" alt="">
+        <span class="story-date color-3">July 19, 2019</span>
+        <h4 class="story-content-1">Conversation rhymes improve kids listening</h4>
+      </div>
+    </div>
+    <div class="view-all">
+      <button>View All</button>
+    </div>
+  </section>
+
+  <!-- footer section -->
+
+
+
+  <footer class="footer">
+    <div class="section">
+      <div class="logo">
+        <img class src="assets/logo.png" alt="">
+        <h3 class="footer-first-heading">Kids Education</h3>
+      </div>
+      <p class="footer-p">Pizza ipsum dolor meat lovers buffalo. Deep dish roll melted bacon Bianca pan bacon pineapple
+        Aussie. Mayo rib
+        sauce Hawaiian meatball.</p>
+    </div>
+    <div class="section">
+      <h3 class="footer-sechond-h3">About School</h3>
+      <ul class="footer-ul">
+        <li><a href="#">Home</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Facilities</a></li>
+        <li><a href="#">Admission</a></li>
+      </ul>
+    </div>
+    <div class="section">
+      <h3 class="keep-heading">Keep In Touch</h3>
+      <div class="social-img">
+        <img src="assets/fb.png" alt="" srcset="">
+        <img src="assets/dribble.png" alt="" srcset="">
+        <img src="assets/twitter.png" alt="" srcset="">
+        <img src="assets/google+.png" alt="" srcset="">
 
       </div>
     </div>
-
-
-
-
-    <div class="curriculum-section">
-
-
-      <div class="curriculum-section-div">
-
-        <div class="curriculum-div-1 color-gr-1">
-          <img class="curriculum-section-img" src="assets/kinder.png" alt="">
-          <h4 class="curriculum-section-4">Kinder (3-6) Years</h4>
-          <p class="curriculum-section-content">Cum sociis natoque penatibus et magnis
-            dis parturient montes, nascetur ridiculus
-            mu sdis parturient</p>
-          <h4 class="read-1">Read More</h4>
-        </div>
-        <div class="curriculum-div-1 color-gr-2">
-          <img class="curriculum-section-img" src="assets/elementary.png" alt="">
-          <h4 class="curriculum-section-4">Kinder (3-6) Years</h4>
-          <p class="curriculum-section-content">Cum sociis natoque penatibus et magnis
-            dis parturient montes, nascetur ridiculus
-            mu sdis parturient</p>
-          <h4 class="read-2">Read More</h4>
-        </div>
-        <div class="curriculum-div-1 color-gr-3">
-          <img class="curriculum-section-img" src="assets/middle.png" alt="">
-          <h4 class="curriculum-section-4">Kinder (3-6) Years</h4>
-          <p class="curriculum-section-content">Cum sociis natoque penatibus et magnis
-            dis parturient montes, nascetur ridiculus
-            mu sdis parturient</p>
-          <h4 class="read-3">Read More</h4>
-        </div>
-      </div>
-    </div>
-
-
-
-
-  </main>
-  <footer>
-
   </footer>
+
+
+
+
 
 </body>
 
