--- a/index.html
+++ b/index.html
@@ -47,21 +47,23 @@
       <div class="card card-color-1">
         <img class="card-img" src="assets/kinder.png" alt="">
         <h3 class="">Kinder (3-6) Years</h3>
-        <p>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus sociis parturient.</p>
-        <p class="read-1">Read More</p>
+        <p>Children become more coordinated and skilled at running, jumping, kicking, and throwing.</p>
+        <p id="point-1" class="read-1 ">Read More</p>
       </div>
       <div class="card  card-color-2">
         <img class="card-img" src="assets/elementary.png" alt="">
         <h3>Elementary School</h3>
-        <p class="">Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus sociis
+        <p class="">Bangladesh Elementary School has got its establishment in the year 1995 and from the inception
           parturient.</p>
-        <p class="read-1">Read More</p>
+        <p id="point-2" class="read-1 ">Read More</p>
       </div>
       <div class="card card-color-3">
         <img class="card-img" src="assets/middle.png" alt="">
-        <h3 class="card-inner-heading">Middle(10-16)Years</h3>
-        <p>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus sociis parturient.</p>
-        <p class="read-1">Read More</p>
+        <h3 id="middle" class="card-inner-heading">Middle(10-16)Years</h3>
+        <p>Do you consider a 15 and 16 year old a young adult, a teenager, both of those? Or do you consider one of them
+          a little
+          kid</p>
+        <p id="point-3" class="read-1 ">Read More</p>
       </div>
     </div>
     <div class="arrow-simbole">
