--- a/index.html
+++ b/index.html
@@ -46,21 +46,23 @@
     <div id="cardss">
       <div class="card card-color-1">
         <img class="card-img" src="assets/kinder.png" alt="">
-        <h3 class="">Kinder (3-6) Years</h3>
-        <p>Children become more coordinated and skilled at running, jumping, kicking, and throwing.</p>
+        <h3 class="card-inner">Kinder (3-6) Years</h3>
+        <p class="pconten">Children become more coordinated and skilled at running, jumping, kicking, and throwing.</p>
         <p id="point-1" class="read-1 ">Read More</p>
       </div>
       <div class="card  card-color-2">
         <img class="card-img" src="assets/elementary.png" alt="">
-        <h3>Elementary School</h3>
-        <p class="">Bangladesh Elementary School has got its establishment in the year 1995 and from the inception
+        <h3 class="card-inner">Elementary School</h3>
+        <p class="pconten">Bangladesh Elementary School has got its establishment in the year 1995 and from the
+          inception
           parturient.</p>
         <p id="point-2" class="read-1 ">Read More</p>
       </div>
       <div class="card card-color-3">
         <img class="card-img" src="assets/middle.png" alt="">
         <h3 id="middle" class="card-inner-heading">Middle(10-16)Years</h3>
-        <p>Do you consider a 15 and 16 year old a young adult, a teenager, both of those? Or do you consider one of them
+        <p class="pconten">Do you consider a 15 and 16 year old a young adult, a teenager, both of those? Or do you
+          consider one of them
           a little
           kid</p>
         <p id="point-3" class="read-1 ">Read More</p>
@@ -75,7 +77,7 @@
 
 
   <section class="our-stories-section">
-    <h2 class="Our-Stories-heading">Our Stories</h2>
+    <h2 id="story-heading" class="Our-Stories-heading">Our Stories</h2>
 
 
     <div class="stories-grid">
